# music_folder_builder

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.codex/: AGENTS.md
.codex/prompts/: sdd-change-init.md  sdd-design.md  sdd-implement.md  sdd-tasks.md  sdd-validate.md
config/: local.docker.toml.example  local.toml.example
docker/: entrypoint.sh
src/music_folder_builder/: __init__.py  __main__.py
src/music_folder_builder/cli/: config.py  exit_codes.py  main.py  output.py
src/music_folder_builder/gui/: __init__.py  __main__.py  app.py  main.py  query_service.py
steering/: product.ja.md  project.yml  structure.ja.md  tech.ja.md
storage/design/: library-apply-design.md  library-rollback-design.md  library-scan-and-plan-design.md  library-verify-design.md
storage/specs/: library-apply-requirements.md  library-rollback-requirements.md  library-scan-and-plan-requirements.md  library-verify-requirements.md
storage/tasks/: library-apply-tasks.md  library-rollback-tasks.md  library-scan-and-plan-tasks.md  library-verify-tasks.md
tests/: test_apply_history_repository.py  test_apply_service.py  test_apply_verify_repository.py  test_cli.py  test_config_io.py  test_db_schema.py  test_file_walker.py  test_gui_app.py  test_gui_query_service.py  test_metadata_reader.py  test_package_layout.py  test_path_policy.py  test_plan_service.py  test_rollback_service.py  test_rollback_verify_repository.py  test_scan_service.py  test_verify_service.py
(+45 files in other folders)
