[project]
name = "music-folder-builder"
version = "0.1.0"
description = "音楽ファイルのメタデータに合わせてフォルダ管理するツール"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47,<2",
]

[project.scripts]
music-folder-builder = "music_folder_builder.cli.main:main"
music-folder-builder-gui = "music_folder_builder.gui.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
